--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
 		{
 			"label": "Build",
 			"type": "shell",
-			"command": "make",
+			"command": "bash -c 'make'",
 			"problemMatcher": [],
 			"group": {
 				"kind": "build",
